--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <img src="img/clark.png" class="img-responsive fa-stack-2x">
+                                <img src="img/tere.png" class="img-responsive fa-stack-2x">
                             </span>
                                 <h4>
                                     <strong>Teresa Tamayo</strong>
