--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.5030256953332!2d-101.27109818524524!3d21.012549493707777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b741bd3bd26db%3A0xff86bdabafa2fc5d!2sUniversidad+de+Guanajuato%3A+Divisi%C3%B3n+de+Ciencias+Naturales+y+Exactas!5e0!3m2!1sen!2smx!4v1467600057517"></iframe>
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15256.146247311237!2d-96.7238103!3d17.0708642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7b04c5216ced82ca!2sInstituto+Blaise+Pascale+S.C.!5e0!3m2!1sen!2smx!4v1467988650417"></iframe>
         <br />
         <small>
-            <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.5030256953332!2d-101.27109818524524!3d21.012549493707777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b741bd3bd26db%3A0xff86bdabafa2fc5d!2sUniversidad+de+Guanajuato%3A+Divisi%C3%B3n+de+Ciencias+Naturales+y+Exactas!5e0!3m2!1sen!2smx!4v1467600057517"></a>
+            <a href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15256.146247311237!2d-96.7238103!3d17.0708642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7b04c5216ced82ca!2sInstituto+Blaise+Pascale+S.C.!5e0!3m2!1sen!2smx!4v1467988650417"></a>
         </small>
         </iframe>
     </section>
