--- a/index.html
+++ b/index.html
@@ -113,45 +113,45 @@
                     <h2 class="text-center">SCHEDULE</h2>
                     <hr class="small">
                     <ul>
-                      <li><h3>DAY 0: <span style="font-size:0.7em;"><br>(Sunday, July 31st)</span></h3></li>
+                      <li><h3>Día 1 - La ciencia de la luz: Visión y fotosíntesis:</h3></li>
                       <ul class="lead">
-                        <li>Inauguration: Clubes de Ciencia México 2016 in Guanajuato.</li>
-                        <li>Clubs/instructors presentation.</li>
-                        <li>Integration activity for students.</li>
+                        <li>Introducción: Espectro electromagnético y proceso de absorción de luz.</li>
+                        <li>Presentación de las ideas “A Beautiful Question”.</li>
+                        <li>Biología de la visión.</li>
                       </ul>
                     </ul>
                     <ul>
-                      <li><h3>DAY 1: <span style="font-size:0.7em;"><br>(Monday, August 1st)</span></h3></li>
+                      <li><h3>Día 2 - Introducción a la programación.</h3></li>
                       <ul class="lead">
+                        <li>Breve introducción a la programación en Python.</li>
+                        <li>Introducción a la manipulación de imágenes: ejemplos que ilustran la naturaleza de los archivos de imagen y cómo actúan sobre ellos comandos de alto nivel.</li>
+                        <li>5 p.m. Science Café.</li>
                       </ul>
                     </ul>
                     <ul>
-                      <li><h3>DAY 2: <span style="font-size:0.7em;"><br>(Tuesday, August 2nd)</span></h3></li>
+                      <li><h3>Día 3 - Introducción a los circuitos y fuentes de luz.</h3></li>
                       <ul class="lead">
+                        <li>Cómo una variable en la iluminación puede ampliar nuestra percepción del color: manipulación física de la imagen.</li>
+                        <li>Introducción a el iluminador.</li>
                       </ul>
                     </ul>
                     <ul>
-                      <li><h3>DAY 3: <span style="font-size:0.7em;"><br>(Wednesday, August 3rd)</span></h3></li>
+                      <li><h3>Día 4 - Construcción del Iluminador.</h3></li>
                       <ul class="lead">
-                        <li>Café de Ciencia at Foro Inundación.</li>
+                        <li>Introducción a los conceptos involucrados en el diseño y el uso Iluminador.</li>
+                        <li>Sesión para la construcción del Iluminador.</li>
+                        <li>Probando un iluminador en ejemplos interesantes.</li>
+                        <li>Introducción a la biología de la audición y el olfato.</li>
+                        <li>Comienzo de la construcción del guante sinestesia.</li>
+                        <li>5 p.m. Science Café</li>
                       </ul>
                     </ul>
                     <ul>
-                      <li><h3>DAY 4: <span style="font-size:0.7em;"><br>(Thursday, August 4th)</span></h3></li>
+                      <li><h3>DAY 5 - Proyectos y comparación sensorial.</h3></li>
                       <ul class="lead">
-                        <li>Posters presentation.</li>
-                      </ul>
-                    </ul>
-                    <ul>
-                      <li><h3>DAY 5: <span style="font-size:0.7em;"><br>(Friday, August 5th)</span></h3></li>
-                      <ul class="lead">
-                      </ul>
-                    </ul>
-                    <ul>
-                      <li><h3>DAY 6: <span style="font-size:0.7em;"><br>(Saturday, August 6th)</span></h3></li>
-                      <ul class="lead">
-                        <li>Closing: Clubes de Ciencia México 2016 in Guanajuato.</li>
-                        <li>Clubs' work presentation at Auditorio General de la Universidad de Guanajuato.</li>
+                        <li>El guante sinestesia.</li>
+                        <li>Características y similitudes entre los diferentes sentidos y su consecuencias en la percepción.</li>
+                        <li>Debate: El futuro de la percepción.</li>
                       </ul>
                     </ul>
                 </div>
