--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2 class="text-center">SCHEDULE</h2>
+                    <h2 class="text-center">Agenda</h2>
                     <hr class="small">
                     <ul>
                       <li><h3>Día 1 - La ciencia de la luz: Visión y fotosíntesis:</h3></li>
